--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
 
   device_preview: 1.2.0
 
+  carousel_slider: 5.0.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -42,6 +44,7 @@ flutter:
   # the material Icons class.
   assets:
     - assets/icons/
+    - assets/banners/
 
   uses-material-design: true
 
