--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,11 @@ dependencies:
 
   carousel_slider: 5.0.0
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+  http: ^1.4.0
+
+  html: ^0.15.6
 
 dev_dependencies:
   flutter_test:
